--- a/.pypirc
+++ b/.pypirc
@@ -4,7 +4,7 @@ index-servers =
   pypitest
 
 [pypi]
-repository: https://pypi.python.org/pypi
+repository: https://upload.pypi.org/legacy/
 
 [pypitest]
-repository: https://testpypi.python.org/pypi
+repository: https://test.pypi.org/legacy/
